# rim

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmd/: CMakeLists.txt  lxtest.f  lxtest.f90  rim.f  rim.f90  rime.f  rime.f90  rimh.f  rimh.f90  rmtest.f  rmtest.f90  test1.f90
doc/: Makefile  common.sty  rimint24.tex  rimref24.tex
doc/Archive/: rimref.tex
src/: CMakeLists.txt  Makefile  Srmqery.f  adddat.f  amsg.f  ascan.f  ascchr.f  ascdat.f  ascpar.inc  asctxt.f  atoi.f  ator.f  attadd.f  attble.inc  attdel.f  attget.f  attnew.f  attpag.f  attput.f  attributes.f90  attributes_data.f90  blkchg.f  blkcln.f  blkcln.f90  blkclr.f  blkdef.f  blkdsp.f  blkdwn.f  blkdwn.f90  blkext.f  blkloc.f  blkmov.f  blkmov.f90  blknxt.f  blkup.f  blkup.f90  blocks.f90  btadd.f  btbuf.inc  btget.f  (+305 more)
test/: CMakeLists.txt  lit.site.cfg.py.in
test/basic/: delete.rim  error1.rim  error2.rim  list.rim  project.rim  reformat.rim  remove.rim  rename.rim  select1.rim  unload.rim  xhibit.rim
test/help/: rim_help.rim  rimh.rim
test/lxtest/: lx.1.rim  lx.2.rim  lx.3.rim  lx.4.rim  lx.5.rim  lx.6.rim  lx.7.rim
test/reports/: e1.rim  e2.rim  e3.rim  e4.rim  e5.rim  e6.rim  e7.rim  e9.rim
test/sample/: battst.rim  s2.rim  sample.rim
test/select/: ave.rim
